# GitHubRepoSummary.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
GitHubRepoSummary/: __init__.py  __main__.py
tests/: tests.py
